# Booklyn

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.config/: nextest.toml
backend/.sqlx/: query-0597e016c4b9c681d08a43bc7a5eac3d0be7dfba63e69caf8a98895dab074b7a.json  query-0edab236229c01984f691755665bd382b271f462264a3a68f18a5f51f016f4a0.json  query-17077f50a147570db4452a1c3f8c279c0329655d5907d04505bbf0737930b6a0.json  query-20cbac7a67100ac8ebf75782810ae565d897ccced919012c1ec85445b24e698d.json  query-2403b11f6cd0fc4e124dc186b4415da0b240e81aa57b02759724aeb39e5c1751.json  query-28d4a8183225c32d672de507a3692ab24891ab9604c0ac0a33fb90f88031d174.json  query-304748c9703db19e8839f33ac1a6520a8d6deb5d9d85ec6dc991d196b5589cc9.json  query-36a26234f8d60e75fba916af1aea3ecd7441ceb4c38ea3f0187e5c7f6f96f4ce.json  query-3eda0a00e160be529e0bc333a4843f1bf7a1dfcd4d920e0d2b50e45910fc9c2f.json  query-43a5fdcc9d69c74a2dbddbd17ea4b368c9f36c53762cb41698e21623b26c2f64.json  query-478b76107fbbb937f55977051cf1e05cffb13b0d5f6cce1ba06c7e7e511c17ce.json  query-53842229916c2a57827619eb146b272a105063ad44e994a35331e2dc62515a4f.json  query-554c45b9775ed60e75da43e7e19885bffa9b13af574a34032225716df3667c1b.json  query-56898aacc394f916c0749734a3dbdc9a1e4b7fedfd9311a27420c8350336b1c8.json  query-58bca5860387bdf60b9d9de3e461e3108d160f90f600ebfeb8b5bdd1e96b01cb.json  query-5a5b46193c77c251dcbc5f7e6d6eb9d1369ddcc6244d2b12b16298a5471e9f2d.json  (+23 more)
backend/src/: api_doc.rs  error.rs  lib.rs  main.rs
(+130 files in other folders)
