[package]
name = "Booklyn_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bigdecimal = { version = "0.4.8", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "json", "time", "bigdecimal"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "serde-human-readable"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
actix-cors = "0.7"  # 或最新版本
